# scriptable-input-simulator

./: Cargo.toml  Notes.txt  README  build-script.bat
examples/: input1.txt  input2.txt  input3.txt
resources/: log4rs.yaml
src/: command_executor.rs  command_types.rs  main.rs  screen_compare.rs
