[package]
name = "auto_clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = {path = "D:\\Rust_Downloaded_GitHub\\enigo", version = "0.0.14"}
phf = { version = "0.11.1", features = ["macros"] }
clap = { version = "4.1.4", features = ["derive"] }
screenshots = "0.5.2"
image = "0.24.5"
log4rs = { version = "1.2.0", features = ["all_components", "gzip", "yaml_format"] }
log = "0.4.17"
